// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshots matches snapshot for button with additional text 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-lg font-secondary font-bold transition-all duration-200 text-center relative overflow-hidden box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer stroke-current px-3.5 py-3 flex-row text-button-md bg-conversion-500 *:text-neutral-00 *:stroke-neutral-00 hover:bg-conversion-900"
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible"
    >
      Button with Text
    </span>
    <span
      class="text-button3 font-bold"
    >
      Additional Info
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for button with icon 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-lg font-secondary font-bold transition-all duration-200 text-center relative overflow-hidden box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer stroke-current px-3.5 py-3 flex-row text-button-md bg-conversion-500 *:text-neutral-00 *:stroke-neutral-00 hover:bg-conversion-900 gap-1.5"
  >
    <span
      class="icon inline-flex items-center justify-center"
    >
      <span>
        🔍
      </span>
    </span>
    <span
      class="inline-block whitespace-nowrap overflow-visible"
    >
      Button with Icon
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for button with right icon 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-lg font-secondary font-bold transition-all duration-200 text-center relative overflow-hidden box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer stroke-current px-3.5 py-3 flex-row-reverse text-button-md bg-conversion-500 *:text-neutral-00 *:stroke-neutral-00 hover:bg-conversion-900 gap-1.5"
  >
    <span
      class="icon inline-flex items-center justify-center"
    >
      <span>
        🔍
      </span>
    </span>
    <span
      class="inline-block whitespace-nowrap overflow-visible"
    >
      Button with Right Icon
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for different sizes 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-lg font-secondary font-bold transition-all duration-200 text-center relative overflow-hidden box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer stroke-current px-3.5 py-2 flex-row text-button-sm bg-conversion-500 *:text-neutral-00 *:stroke-neutral-00 hover:bg-conversion-900"
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible"
    >
      Small Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for different sizes 2`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-lg font-secondary font-bold transition-all duration-200 text-center relative overflow-hidden box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer stroke-current px-3.5 py-3 flex-row text-button-md bg-conversion-500 *:text-neutral-00 *:stroke-neutral-00 hover:bg-conversion-900"
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible"
    >
      Medium Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for different sizes 3`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-lg font-secondary font-bold transition-all duration-200 text-center relative overflow-hidden box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer stroke-current px-6 py-3.5 flex-row text-button-lg bg-conversion-500 *:text-neutral-00 *:stroke-neutral-00 hover:bg-conversion-900"
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible"
    >
      Large Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for disabled state 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-lg font-secondary font-bold transition-all duration-200 text-center relative overflow-hidden box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer stroke-current px-3.5 py-3 flex-row text-button-md bg-conversion-500 *:text-neutral-00 *:stroke-neutral-00 hover:bg-conversion-900"
    disabled=""
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible"
    >
      Disabled Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for full width button 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-lg font-secondary font-bold transition-all duration-200 text-center relative overflow-hidden box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer stroke-current px-3.5 py-3 flex-row text-button-md bg-conversion-500 *:text-neutral-00 *:stroke-neutral-00 hover:bg-conversion-900"
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible"
    >
      Full Width Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for outlined variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-lg font-secondary font-bold transition-all duration-200 text-center relative overflow-hidden box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer stroke-current bg-transparent outline-[1.67px] outline-offset-[-1.67px] outline-current px-3.5 py-3 flex-row text-button-md hover:bg-conversion-900 hover:outline-conversion-900 hover:*:text-neutral-00 hover:*:stroke-neutral-00"
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible"
    >
      Outlined Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for solid variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-lg font-secondary font-bold transition-all duration-200 text-center relative overflow-hidden box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer stroke-current px-3.5 py-3 flex-row text-button-md bg-conversion-500 *:text-neutral-00 *:stroke-neutral-00 hover:bg-conversion-900"
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible"
    >
      Solid Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for text variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-lg font-secondary font-bold transition-all duration-200 text-center relative overflow-hidden box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer stroke-current bg-transparent p-[2px] *:decoration-current px-3.5 py-3 flex-row text-button-md hover:text-conversion-900 hover:stroke-conversion-900 *:underline hover:*:no-underline"
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible"
    >
      Text Button
    </span>
  </button>
</div>
`;
